GNOME Bugzilla – Bug 692741
Fixes for the resize window popup
Last modified: 2013-02-10 19:26:09 UTC
It doesn't currently look like a GtkTooltip; attached patchset fixes that.
Created attachment 234661 [details] [review] resize-popup: don't use a GtkFrame We want this to look like a normal tooltip - start with removing the GtkFrame around its shape.
Created attachment 234662 [details] [review] resize-popup: set a bigger margin Since we're going to use the tooltip's rounded corners we need a little bit more of margin (which wasn't a bad idea even with the frame). Also, don't use GtkMisc for this anymore.
Created attachment 234663 [details] [review] resize-popup: use a tooltip style for the resize popup window - set GTK_STYLE_CLASS_TOOLTIP on the window, and use the same code of GtkTooltip to paint it - set GDK_WINDOW_TYPE_HINT_TOOLTIP and make the window non-resizable, so it doesn't get an incorrect shadow from the WM
Review of attachment 234661 [details] [review]: Looks good.
Review of attachment 234662 [details] [review]: OK.
Review of attachment 234663 [details] [review]: Looks good.
Attachment 234661 [details] pushed as c3ffd28 - resize-popup: don't use a GtkFrame Attachment 234662 [details] pushed as 34fc234 - resize-popup: set a bigger margin Attachment 234663 [details] pushed as 94e6e55 - resize-popup: use a tooltip style for the resize popup window